# neurodamus-models

./: .flake8  .gitignore  .gitlab-ci.yml  AUTHORS.txt  CMakeLists.txt  README.md  build_neurodamus.sh.in  model_config.json  model_manager.py  update_models.sh
.github/workflows/: test.yml
_ci/: test_models.yml
common/: .gitlab-ci.yml  .gitreview  README.md
common/.jenkins/: test_GluSynapse.sh
common/hoc/: AMPANMDAHelper.hoc  DetAMPANMDAHelper.hoc  DetGABAABHelper.hoc  GABAABHelper.hoc  GluSynapseHelper.hoc  GluSynapseLegacyHelper.hoc  GluSynapseNOSTDPHelper.hoc
common/mod/: ConductanceSource.mod  DetAMPANMDA.mod  DetGABAAB.mod  GluSynapse.mod  GluSynapse_TM.mod  MembraneCurrentSource.mod  ProbAMPANMDA.mod  ProbAMPANMDA_EMS.mod  ProbGABAA.mod  ProbGABAAB_EMS.mod  ProbGABAA_EMS.mod  VecStim.mod  gap.mod  netstim_inhpoisson.mod  vecevent.mod
common/mod/ngv/: Glia.mod  GluReceive.mod  GluReceiveSoma.mod  ProbAMPANMDA_EMS.mod  cadifus.mod  mcd13.mod  vascouplingB.mod
common/mod/optimized/: ProbAMPANMDA_EMS.mod  ProbGABAAB_EMS.mod
common/test/: requirements.txt  run_all.sh
common/test/glusynapse/: README.md  test_ltpltd.py  test_transmission.py
hippocampus/: .gitlab-ci.yml  .gitmodules  .gitreview  README.md  fetch_common.bash
hippocampus/hoc/: DetAMPANMDAHelper.hoc  GluSynapseHelper.hoc
hippocampus/mod/: DetAMPANMDA.mod  DetGABAAB.mod  ProbAMPANMDA_EMS.mod  ProbGABAAB_EMS.mod  cacummb.mod  gap.mod  kd.mod  kd2.mod  km.mod  optimized
mousify/: README.md
mousify/hoc/: AMPANMDAHelper.hoc  DetAMPANMDAHelper.hoc  GABAABHelper.hoc
mousify/mod/: Kv2like.mod  NaV.mod
neocortex/: .gitlab-ci.yml  .gitreview  README.md  fetch_common.bash
neocortex/hoc/: AMPANMDAHelper.hoc  GABAABHelper.hoc  GluSynapseLegacyHelper.hoc
neocortex/mod/: Ca.mod  CaDynamics_DC0.mod  CaDynamics_E3.mod  IM2.mod  KdShu2007.mod  NaTa_t.mod  NaTg.mod  NaTs2_t.mod  Nap_Et2.mod  README.txt  SimConfig.mod  StochKv.mod  StochKv2.mod  StochKv3.mod
neocortex/mod/common/: ProbAMPANMDA_EMS.mod  conductanceSource.mod
neocortex/mod/metabolism/: Ca_HVA2.mod  Ca_LVAst.mod  DetAMPANMDA.mod  DetGABAAB.mod  GluSynapse.mod  Ih.mod  Im.mod  IonSynapse.mod  K_Pst.mod  K_Tst.mod  KdShu2007.mod  NaTa_t.mod  NaTg.mod  NaTs2_t.mod  Nap_Et2.mod  ProbAMPANMDA_EMS.mod  ProbGABAAB_EMS.mod  SK_E2.mod  SKv3_1.mod  StochKv3.mod  ampa.mod  internal_ions.mod  kcc2.mod  leak.mod  naclamp.mod  nakcc.mod  nakpump.mod
neocortex/mod/plasticity/: ProbAMPANMDA_EMS.mod  ProbGABAAB_EMS.mod
neocortex/mod/v5/: DetGABAAB.mod  Ih.mod  K_Pst.mod  KdShu2007.mod  ProbAMPANMDA_EMS.mod  ProbGABAAB_EMS.mod  SK_E2.mod  StochKv.mod  TTXDynamicsSwitch.mod  VecStim.mod  gap.mod  netstim_inhpoisson.mod  optimized
neocortex/mod/v6/: Ca_LVAst.mod  ConductanceSource.mod  DetAMPANMDA.mod  GluSynapse.mod  K_Tst.mod  Kv7.mod  MembraneCurrentSource.mod  NaTg_persistent_axon.mod  NaTg_somadend.mod  Nap_Et2.mod  ProbAMPANMDA_EMS.mod  SKv3_1.mod  StochKv3.mod  netstim_inhpoisson.mod  optimized  vecevent.mod
thalamus/: .gitlab-ci.yml  .gitmodules  .gitreview  README.md  fetch_common.bash
thalamus/hoc/: DetGABAABHelper.hoc  GluSynapseHelper.hoc
thalamus/mod/: CaDynamics_DC0.mod  Ca_HVA2.mod  Ca_LVAst.mod  DetAMPANMDA.mod  GluSynapse.mod  Ih.mod  K_Pst.mod  K_Tst.mod  KdShu2007.mod  NaTg.mod  NaTg_axon.mod  NaTg_persistent_somadend.mod  Nap_Et2.mod  ProbAMPANMDA_EMS.mod  ProbGABAAB_EMS.mod  SK_E2.mod  SKv3_1.mod  StochKv3.mod  TC_HH.mod  TC_ITGHK.mod  TC_ITGHK_Ama14.mod  TC_ITGHK_Des98.mod  TC_Ih.mod  TC_Ih_Bud97.mod  TC_Kleak.mod  TC_NaP.mod  TC_Nap_Et2.mod  TC_cadecay.mod  TC_iA.mod  TC_iL.mod  TC_kir_Con15.mod  TTXDynamicsSwitch.mod  VecStim.mod  cad.mod  gap.mod  hh2.mod  iA.mod  iL.mod  iahp.mod  ican.mod  (+5 more)
